[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cape-audit"
version = "1.0.0"
authors = [
  { name="Nia Catlin", email="niacatn@gmail.com" },
]
description = "Base classes for building CAPE sandbox evaluation tests"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    # Add any external pip requirements here, e.g.:
    # "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/ncatlin/cape_audit"

[tool.setuptools.packages.find]
where = ["."]
include = ["cape_audit*"]